[gd_scene load_steps=34 format=3 uid="uid://d2grct465h5vg"]

[ext_resource type="Script" path="res://assets/scripts/deer.gd" id="1_dmsfe"]
[ext_resource type="Texture2D" uid="uid://dh6rc3oufqr7a" path="res://assets/gfx/eating_grass.png" id="2_fw4s6"]
[ext_resource type="Script" path="res://assets/scripts/classes/statemachine.gd" id="3_5t2ie"]
[ext_resource type="SpriteFrames" uid="uid://cd1m03oqavhob" path="res://assets/gfx/animationResources/head_1.tres" id="4_54a1f"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_idle.gd" id="4_ooadb"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_dead.gd" id="5_s73bd"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_wander.gd" id="6_wjb60"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_eat.gd" id="8_btra8"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_attack.gd" id="9_ca8ft"]
[ext_resource type="Texture2D" uid="uid://bxroiqp145tr0" path="res://assets/gfx/bodies.png" id="9_fopbx"]
[ext_resource type="Script" path="res://assets/scripts/classes/state/state_pushback.gd" id="10_ndokc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kq0bc"]
size = Vector2(18, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_egdyr"]
atlas = ExtResource("2_fw4s6")
region = Rect2(0, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_r0rmb"]
atlas = ExtResource("2_fw4s6")
region = Rect2(49, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_72qjj"]
atlas = ExtResource("2_fw4s6")
region = Rect2(98, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1nvv"]
atlas = ExtResource("2_fw4s6")
region = Rect2(147, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tbsq"]
atlas = ExtResource("2_fw4s6")
region = Rect2(196, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_u48pk"]
atlas = ExtResource("2_fw4s6")
region = Rect2(245, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_pwfbx"]
atlas = ExtResource("2_fw4s6")
region = Rect2(294, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnevr"]
atlas = ExtResource("2_fw4s6")
region = Rect2(343, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3ksj"]
atlas = ExtResource("2_fw4s6")
region = Rect2(392, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_j70ca"]
atlas = ExtResource("2_fw4s6")
region = Rect2(441, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_laluv"]
atlas = ExtResource("2_fw4s6")
region = Rect2(490, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_xsrlt"]
atlas = ExtResource("2_fw4s6")
region = Rect2(539, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_dbtil"]
atlas = ExtResource("2_fw4s6")
region = Rect2(588, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_ts3yx"]
atlas = ExtResource("2_fw4s6")
region = Rect2(637, 0, 49, 29)

[sub_resource type="AtlasTexture" id="AtlasTexture_r2ejd"]
atlas = ExtResource("2_fw4s6")
region = Rect2(0, 0, 49, 29)

[sub_resource type="SpriteFrames" id="SpriteFrames_nvc8e"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_egdyr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r0rmb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72qjj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1nvv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tbsq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u48pk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pwfbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnevr")
}],
"loop": false,
"name": &"eat_start",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3ksj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j70ca")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_laluv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xsrlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dbtil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ts3yx")
}],
"loop": true,
"name": &"eating",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r2ejd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fact5"]
size = Vector2(24, 25)

[sub_resource type="Curve" id="Curve_der5w"]
_data = [Vector2(0, 1), 0.0, 1.14299, 0, 0, Vector2(1, 0), -3.60324, 0.0, 0, 0]
point_count = 2

[sub_resource type="Animation" id="Animation_fg7is"]
resource_name = "appear"
length = 0.3
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("MainSprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("MainSprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1e-05, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.3)
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_v6wje"]
_data = {
"appear": SubResource("Animation_fg7is")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_xs716"]
radius = 48.0

[node name="Deer" type="CharacterBody2D"]
motion_mode = 1
platform_floor_layers = 4294901760
script = ExtResource("1_dmsfe")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 2)
shape = SubResource("RectangleShape2D_kq0bc")

[node name="MainSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
scale = Vector2(1e-05, 1e-05)
sprite_frames = SubResource("SpriteFrames_nvc8e")
animation = &"eat_start"
autoplay = "idle"

[node name="HeadSprite" type="AnimatedSprite2D" parent="MainSprite"]
sprite_frames = ExtResource("4_54a1f")
animation = &"idle"
autoplay = "idle"

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 4
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -7.5)
shape = SubResource("RectangleShape2D_fact5")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("actor", "defaultState")]
script = ExtResource("3_5t2ie")
actor = NodePath("..")
defaultState = NodePath("State_Idle")

[node name="State_Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "headSprite")]
script = ExtResource("4_ooadb")
actor = NodePath("../..")
animator = NodePath("../../MainSprite")
headSprite = NodePath("../../MainSprite/HeadSprite")

[node name="State_Dead" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "hitBox", "collision", "sprite", "deadSprite")]
script = ExtResource("5_s73bd")
actor = NodePath("../..")
hitBox = NodePath("../../HitBox")
collision = NodePath("../../CollisionShape2D")
sprite = NodePath("../../MainSprite")
deadSprite = NodePath("../../DeadSprite")

[node name="State_Wander" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("6_wjb60")
actor = NodePath("../..")

[node name="State_Eat" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "headSprite")]
script = ExtResource("8_btra8")
actor = NodePath("../..")
animator = NodePath("../../MainSprite")
headSprite = NodePath("../../MainSprite/HeadSprite")

[node name="State_Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor", "animator", "headSprite", "navigationAgent")]
script = ExtResource("9_ca8ft")
actor = NodePath("../..")
animator = NodePath("../../MainSprite")
headSprite = NodePath("../../MainSprite/HeadSprite")
navigationAgent = NodePath("../../NavigationAgent")

[node name="State_Pushback" type="Node" parent="StateMachine" node_paths=PackedStringArray("actor")]
script = ExtResource("10_ndokc")
actor = NodePath("../..")

[node name="BehaviorTimer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="BloodParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -7)
emitting = false
amount = 64
lifetime = 0.6
one_shot = true
explosiveness = 1.0
gravity = Vector2(0, 129)
initial_velocity_min = 50.0
initial_velocity_max = 120.0
scale_amount_min = 3.0
scale_amount_max = 5.0
scale_amount_curve = SubResource("Curve_der5w")
color = Color(0, 0, 0, 1)

[node name="DeadSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -9)
texture = ExtResource("9_fopbx")
region_enabled = true
region_rect = Rect2(0, 0, 49, 29)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_v6wje")
}

[node name="InfectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InfectionArea"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_xs716")

[node name="NavigationAgent" type="NavigationAgent2D" parent="."]

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="timeout" from="BehaviorTimer" to="." method="_on_behavior_timer_timeout"]
